# whisper-diarization

./: .gitignore  Dockerfile  LICENSE  README.md  Whisper_Transcription_+_NeMo_Diarization.ipynb  constraints.txt  diarize.py  diarize_parallel.py  helpers.py  nemo_process.py  pyproject.toml  requirements.txt  transcription_helpers.py
.github/workflows/: test_run.yml
nemo_msdd_configs/: diar_infer_general.yaml  diar_infer_meeting.yaml  diar_infer_telephonic.yaml
tests/assets/: test.opus
